packages/cli/src/__tests__/fixtures/multi-schema-files/valid-custom-output/prisma/schema/schema1.prisma
generator client {
  provider = "prisma-client-js"
  output   = "../client"
}

datasource db {
  provider = "sqlite"
  url      = "file:../dev.db"
}

model User {
  id   String @id @default(uuid())
  link Link[]
}
