packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/valid_config_file/prisma/schema/config.prisma
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["prismaSchemaFolder"]
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}
